--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/index.1bf60fc1.css"><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.30e62e77.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet"><title>Frontend Mentor | Calculator app</title></head><body class="dark-theme"> <header> <h1>calc</h1> <div id="theme-selector"> <h3>Theme</h3> <div class="theme-switcher"> <div class="theme-switcher__labels"> <label for="dark">1</label> <label for="light">2</label> <label for="purple">3</label> </div> <div class="theme-switcher__btns"> <input type="radio" id="dark" name="theme" value="dark"> <input type="radio" id="light" name="theme" value="light" checked> <input type="radio" id="purple" name="theme" value="purple"> <span id="active-btn"></span> </div> </div> </div> </header> <main> <div class="calculator"> <div class="calculator__display">0</div> <div class="calculator__inputs"> <button class="calculator__inputs--btn" value="7">7</button><button class="calculator__inputs--btn" value="8">8</button><button class="calculator__inputs--btn" value="9">9</button><button class="calculator__inputs--btn" value="delete" id="delete"> DEL</button><button class="calculator__inputs--btn" value="4">4</button><button class="calculator__inputs--btn" value="5">5</button><button class="calculator__inputs--btn" value="6">6</button><button class="calculator__inputs--btn" value="add">+</button><button class="calculator__inputs--btn" value="1">1</button><button class="calculator__inputs--btn" value="2">2</button><button class="calculator__inputs--btn" value="3">3</button><button class="calculator__inputs--btn" value="sub">-</button><button class="calculator__inputs--btn" value=".">.</button><button class="calculator__inputs--btn" value="0">0</button><button class="calculator__inputs--btn" value="divide">/</button><button class="calculator__inputs--btn" value="multiply">x</button> <button class="calculator__inputs--btn" value="reset" id="reset"> RESET </button> <button class="calculator__inputs--btn" value="equal" id="equal"> = </button> </div> </div> </main> <script type="module" src="/index.14f60395.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="style.d62fca11.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.b532600b.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+    <title>Frontend Mentor | Calculator app</title>
+  </head>
+  <body class="dark-theme">
+    <header>
+      <h1>calc</h1>
+      <div id="theme-selector">
+        <h3>Theme</h3>
+        <div class="theme-switcher">
+          <div class="theme-switcher__labels">
+            <label for="dark">1</label>
+            <label for="light">2</label>
+            <label for="purple">3</label>
+          </div>
+          <div class="theme-switcher__btns">
+            <input type="radio" id="dark" name="theme" value="dark">
+            <input type="radio" id="light" name="theme" value="light" checked="">
+            <input type="radio" id="purple" name="theme" value="purple">
+            <span id="active-btn"></span>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="calculator">
+        <div class="calculator__display">0</div>
+
+        <div class="calculator__inputs">
+          <button class="calculator__inputs--btn" value="7">7</button><button class="calculator__inputs--btn" value="8">8</button><button class="calculator__inputs--btn" value="9">9</button><button class="calculator__inputs--btn" value="delete" id="delete">
+            DEL</button><button class="calculator__inputs--btn" value="4">4</button><button class="calculator__inputs--btn" value="5">5</button><button class="calculator__inputs--btn" value="6">6</button><button class="calculator__inputs--btn" value="add">+</button><button class="calculator__inputs--btn" value="1">1</button><button class="calculator__inputs--btn" value="2">2</button><button class="calculator__inputs--btn" value="3">3</button><button class="calculator__inputs--btn" value="sub">-</button><button class="calculator__inputs--btn" value=".">.</button><button class="calculator__inputs--btn" value="0">0</button><button class="calculator__inputs--btn" value="divide">/</button><button class="calculator__inputs--btn" value="multiply">x</button>
+          <button class="calculator__inputs--btn" value="reset" id="reset">
+            RESET
+          </button>
+          <button class="calculator__inputs--btn" value="equal" id="equal">
+            =
+          </button>
+        </div>
+      </div>
+    </main>
+    <script type="module" src="js.2ee5dcfb.js"></script>
+  </body>
+</html>
