fix readme, themeswitcher

--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
             <label for="purple">3</label>
           </div>
           <div class="theme-switcher__btns">
-            <input type="radio" id="dark" name="theme" value="dark" />
-            <input type="radio" id="light" name="theme" value="light" checked />
+            <input type="radio" id="dark" name="theme" value="dark" checked/>
+            <input type="radio" id="light" name="theme" value="light"/>
             <input type="radio" id="purple" name="theme" value="purple" />
             <span id="active-btn"></span>
           </div>
@@ -70,6 +70,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="./main/js/index.mjs"></script>
+    <script type="module" src="./main/js/index.js"></script>
   </body>
 </html>
