--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <label for="purple">3</label>
           </div>
           <div class="theme-switcher__btns">
-            <input type="radio" id="dark" name="theme" value="dark">
-            <input type="radio" id="light" name="theme" value="light" checked="">
+            <input type="radio" id="dark" name="theme" value="dark" checked="">
+            <input type="radio" id="light" name="theme" value="light">
             <input type="radio" id="purple" name="theme" value="purple">
             <span id="active-btn"></span>
           </div>
@@ -47,6 +47,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="js.2ee5dcfb.js"></script>
+    <script type="module" src="js.af1bb349.js"></script>
   </body>
 </html>
